Added decryption secret to repository
This file was previously excluded for legal concerns regarding circumvention of DRM measures. However, this secret is only used to decrypt information that can only be accessed when a user has legitimate access to the newspaper it should decrypt. This means that we don't circumvent any DRM measures but still only provide access to information the user already had access to, it only was obfuscated. Knowing this secret doesn't allow arbitrary users to decrypt files of other users, the copy protection still is in place.